# Py-Fundamentals

./: README.md  main.py  pyproject.toml  requirements_dev.txt  setup.cfg
src/: _utils.py  fmp.py
src/fundamentals/: __init__.py  _constants.py  _utils.py  base.py  body.py  compare.py  containers.py  dclasses.py  factories.py  factory.py  fmp.py  reader.py  readers.py  stock.py
tests/: test_fundamentals.py
