[metadata]
name = py-fundamentals
description = Python module to analyze stock(s) fundamentals.
author = Justin Vannelli
author_email = jaymvannelli@gmail.com
license = MIT
license_files = LICENSE

[options]
packages =
    fundamentals
install_requires =
    requests>=2
python_version = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
fundamentals = py.typed

[flake8]
max-line-length = 160